--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ p {
 </div>
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Dec 19, 2020 12:00:00").getTime();
+var countDownDate = new Date("Dec 19, 2020 00:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -88,11 +88,11 @@ var x = setInterval(function() {
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
     
   // Output the result in an element with id="demo"
-  document.getElementById("demo").innerHTML = days + "Days";
+  document.getElementById("demo").innerHTML = days + "Day";
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "HAPPY GRADUATION DAY!! CONGRATULATIONS!";
+    document.getElementById("demo").innerHTML = "HAPPY HOLIDAYS!!🎄🎆KEEP SAFE EVERYONE!!";
   }
 }, 1000);
 </script>
